[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/Menu/Main/Login.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Aquire-BW0ox.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Fonts/Audiowide-en4g.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 79
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 44
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=4]
size = 44
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )

[node name="Control2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.082
anchor_top = -0.063
anchor_right = 0.082
anchor_bottom = -0.063
margin_left = -157.44
margin_top = 68.04
margin_right = 1762.56
margin_bottom = 1148.04
color = Color( 0, 0, 0, 1 )

[node name="LoginRect" type="ColorRect" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 896.0
margin_bottom = 1024.0
color = Color( 0, 0, 0, 1 )

[node name="LoginTitle" type="Label" parent="LoginRect"]
margin_left = 65.0
margin_top = 131.0
margin_right = 769.0
margin_bottom = 259.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 1 )
text = "Login"
align = 1

[node name="LoginForm" type="VBoxContainer" parent="LoginRect"]
anchor_left = 0.067
anchor_top = 0.195
anchor_right = 0.453
anchor_bottom = 0.788
margin_left = 9.256
margin_top = 135.8
margin_right = 392.104
margin_bottom = 22.52
custom_constants/separation = 34

[node name="UsernameTitle" type="Label" parent="LoginRect/LoginForm"]
margin_right = 704.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 2 )
text = "Username"
align = 1

[node name="Username" type="LineEdit" parent="LoginRect/LoginForm"]
margin_top = 91.0
margin_right = 704.0
margin_bottom = 141.0
rect_min_size = Vector2( 0, 50 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
align = 1

[node name="PasswordTitle" type="Label" parent="LoginRect/LoginForm"]
margin_top = 175.0
margin_right = 704.0
margin_bottom = 232.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 4 )
text = "Password"
align = 1

[node name="Password" type="LineEdit" parent="LoginRect/LoginForm"]
margin_top = 266.0
margin_right = 704.0
margin_bottom = 316.0
rect_min_size = Vector2( 0, 50 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
align = 1
secret = true

[node name="Login" type="Button" parent="LoginRect/LoginForm"]
margin_left = 252.0
margin_top = 350.0
margin_right = 452.0
margin_bottom = 430.0
rect_min_size = Vector2( 200, 80 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 7 )
text = "Login"

[node name="CreateUserRect" type="ColorRect" parent="."]
margin_left = 1024.0
margin_top = 64.0
margin_right = 1856.0
margin_bottom = 1024.0
color = Color( 0, 0, 0, 1 )

[node name="CreateUserTitle" type="Label" parent="CreateUserRect"]
margin_left = 65.0
margin_top = 131.0
margin_right = 769.0
margin_bottom = 259.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 1 )
text = "Create User"
align = 1

[node name="CreateUserForm" type="VBoxContainer" parent="CreateUserRect"]
anchor_left = 0.067
anchor_top = 0.195
anchor_right = 0.453
anchor_bottom = 0.788
margin_left = 9.256
margin_top = 71.8
margin_right = 392.104
margin_bottom = 143.52
custom_constants/separation = 42

[node name="EmailTitle" type="Label" parent="CreateUserRect/CreateUserForm"]
margin_right = 704.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 2 )
text = "Email"
align = 1

[node name="Email" type="LineEdit" parent="CreateUserRect/CreateUserForm"]
margin_top = 99.0
margin_right = 704.0
margin_bottom = 149.0
rect_min_size = Vector2( 0, 50 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
align = 1

[node name="UsernameTitle" type="Label" parent="CreateUserRect/CreateUserForm"]
margin_top = 191.0
margin_right = 704.0
margin_bottom = 248.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 2 )
text = "Username"
align = 1

[node name="Username" type="LineEdit" parent="CreateUserRect/CreateUserForm"]
margin_top = 290.0
margin_right = 704.0
margin_bottom = 340.0
rect_min_size = Vector2( 0, 50 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
align = 1

[node name="PasswordTitle" type="Label" parent="CreateUserRect/CreateUserForm"]
margin_top = 382.0
margin_right = 704.0
margin_bottom = 439.0
custom_colors/font_color = Color( 0.945098, 0.937255, 0.905882, 1 )
custom_fonts/font = SubResource( 4 )
text = "Password"
align = 1

[node name="Password" type="LineEdit" parent="CreateUserRect/CreateUserForm"]
margin_top = 481.0
margin_right = 704.0
margin_bottom = 531.0
rect_min_size = Vector2( 0, 50 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 3 )
align = 1
secret = true

[node name="CreateUser" type="Button" parent="CreateUserRect/CreateUserForm"]
margin_left = 252.0
margin_top = 573.0
margin_right = 452.0
margin_bottom = 653.0
rect_min_size = Vector2( 200, 80 )
size_flags_horizontal = 4
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/normal = SubResource( 7 )
text = "Create"
